# ffi-result

./: Cargo.toml
src/: lib.rs
